# EiffelNet

./: .gitignore  CMakeLists.txt  README.md  main.c
data/: lycees.csv  voeux.csv  voeux_zones.csv
includes/: eiffelnet.h  eiffelnet_debug.h  eleve.h  lecture.h  lycee.h  main.h  output.h  test.h  voeux.h
src/: eiffelnet.c  eleve.c  exemple_lecture.c  exemple_tri.c  lecture.c  lycee.c  output.c  voeux.c
tests/: check_functions.py  eiffelnet.py  generate_values.py  tests.c
